# incubator-mesos

docs/: EC2-Scripts.md
ec2/: Makefile.am  mesos-ec2  mesos_ec2.py  setup-mesos-ami.sh
ec2/deploy.generic/root/ephemeral-hdfs/conf/: hadoop-env.sh  hdfs-site.xml
ec2/deploy.generic/root/mesos-ec2/: mesos-master-env.sh  mesos-slave-env.sh  redeploy-mesos  setup  setup-slave  spark-env.sh
ec2/deploy.generic/root/mesos-ec2/hadoop-framework-conf/: hadoop-env.sh  mapred-site.xml
ec2/deploy.generic/root/persistent-hdfs/conf/: hadoop-env.sh  hdfs-site.xml
src/deploy/: mesos-deploy-env.sh.template
