# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

# EC2 support.
EXTRA_DIST = mesos-ec2 mesos_ec2.py

EXTRA_DIST = setup-mesos-ami.sh

EXTRA_DIST += deploy.generic/root/ephemeral-hdfs/conf/core-site.xml	\
  deploy.generic/root/ephemeral-hdfs/conf/hadoop-env.sh		\
  deploy.generic/root/ephemeral-hdfs/conf/hdfs-site.xml		\
  deploy.generic/root/ephemeral-hdfs/conf/mapred-site.xml		\
  deploy.generic/root/ephemeral-hdfs/conf/masters			\
  deploy.generic/root/ephemeral-hdfs/conf/slaves			\
  deploy.generic/root/mesos-ec2/cluster-url				\
  deploy.generic/root/mesos-ec2/copy-dir				\
  deploy.generic/root/mesos-ec2/create-swap				\
  deploy.generic/root/mesos-ec2/hadoop-framework-conf/core-site.xml	\
  deploy.generic/root/mesos-ec2/hadoop-framework-conf/hadoop-env.sh	\
  deploy.generic/root/mesos-ec2/hadoop-framework-conf/mapred-site.xml	\
  deploy.generic/root/mesos-ec2/masters				\
  deploy.generic/root/mesos-ec2/redeploy-mesos				\
  deploy.generic/root/mesos-ec2/setup					\
  deploy.generic/root/mesos-ec2/setup-slave				\
  deploy.generic/root/mesos-ec2/slaves					\
  deploy.generic/root/mesos-ec2/ssh-no-keychecking			\
  deploy.generic/root/mesos-ec2/zoo					\
  deploy.generic/root/persistent-hdfs/conf/core-site.xml		\
  deploy.generic/root/persistent-hdfs/conf/hadoop-env.sh		\
  deploy.generic/root/persistent-hdfs/conf/hdfs-site.xml		\
  deploy.generic/root/persistent-hdfs/conf/mapred-site.xml		\
  deploy.generic/root/persistent-hdfs/conf/masters			\
  deploy.generic/root/persistent-hdfs/conf/slaves			\
  deploy.generic/root/spark/conf/spark-env.sh
